--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<li>Javascript</li>
 						<li>Tailwind</li>
 						<li>Semantics-UI</li>
-						<li>Api | Ajax</li>
+						<li>Api | Axios</li>
 					</ul>
 				</div>
 				<div class="small-12 medium-4 columns text-center experience-topics">
@@ -92,19 +92,18 @@
 						<li>SQL</li>
 						<li>Mongo</li>
 						<li>Restful Web Services</li>
-						<li>Flask | Python</li>
+						<li>Django | Python</li>
 					</ul>
 				</div>
 				<div class="small-12 medium-4 columns text-center experience-topics">
 					<i class="fi-star"></i>
 					<h3>Tools</h3>
 					<ul>
-						<li>Vim</li>
-						<li>Bower</li>
-						<li>Atom || Webstorm</li>
-						<li>Github && Bitbucket</li>
-						<li>SSH</li>
-						<li>Gulp</li>
+						<li>VS Code</li>
+						<li>Figma</li>
+						<li>Github</li>
+						<li>MS Office </li>
+						
 					</ul>
 				</div>
 			</div>
@@ -124,11 +123,11 @@
 				</div>
 				<div class="small-12 medium-5 medium-pull-7 columns">
 					<div class="details details-ftm">
-						<h3>Curabitur Tech</h3>
+						<h3>JA's Hostel Plaza</h3>
 						<p class="platform">Web</p>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>Curabitur Tech is id eros nisl. Cras id bibendum dolor. Quisque ultrices posuere ante sit amet varius.</p>
-						<a class="my-button" target="_blank" href="http://google.com">Visit Website</a>
+						<p>Ja's Hostel Plaza is a university hostel in Tamale UDS Campus. This is front end of the website with booking fuctionality and an admin section (/admin) for administrator hostel management.</p>
+						<a class="my-button" target="_blank" href="https://jshostelplaza.vercel.app/">Visit Website</a>
 					</div>
 				</div>
 			</div>
@@ -139,11 +138,11 @@
 				</div>
 				<div class="small-12 medium-5 medium-offset-1 columns">
 					<div class="details details-ftm">
-						<h3>AwesomeTechSmth</h3>
+						<h3>Concept Foods</h3>
 						<p class="platform">Web</p>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>GreatTechSmth is venenatis porta dolor sit amet vestibulum.</p>
-						<a class="my-button" target="_blank" href="http://google.com">Visit Website</a>
+						<p>Concept Foods is a resturant and Bar. This a web site showcasing the venue ,its services and appeal.</p>
+						<a class="my-button" target="_blank" href="https://zark28.github.io/cf-cafe-resturant">Visit Website</a>
 					</div>
 				</div>
 			</div>
@@ -154,10 +153,10 @@
 				</div>
 				<div class="small-12 medium-5 medium-pull-7 columns">
 					<div class="details details-ftm">
-						<h3>Suspendisse Cars</h3>
+						<h3>FEEM Initiative</h3>
 						<p class="platform">Web</p>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>Suspendisse Cars pulvinar magna a mattis maximus.</p>
+						<p>Female Empowerment Initiative is a NGO supporting young girls and Women in areas of education and trade just to name a few.The site is to showcase thier work through blogs and seek donor support. It has and Admin section for posting Blogs</p>
 						<a class="my-button" target="_blank" href="http://google.com">Visit Website</a>
 					</div>
 				</div>
