--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1, maximum-scale=1" />
+	<meta name="key words" content="developer portfolio,resume,cv,projects,developer projexts "/>
+	<meta name="description" content="Developers portfoli of Adams Abdul-razak, a 3 years react js developer  "/>
 	<title>Portfolio Abdul-Razak Adams</title>
 	<script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
 	<link rel="stylesheet" href="bower_components/foundation-sites/dist/css/foundation.min.css">
@@ -46,14 +48,14 @@
 			<div class="row">
 				<div class="small-12 column">
 					<div class="cta text-center">
-						<a class="my-button cta-button expand form-button" href="mailto:adamsabdulrazak28@gmail.com">Get In Touch</a>
+						<a class="my-button cta-button expand form-button" target="_blank" href="mailto:adamsabdulrazak28@gmail.com">Get In Touch</a>
 					</div>
 				</div>
 				<div class="small-12 column">
 					<div class="my-arrow-div text-center">
-						<a href="https://github.com/zark28"><i class="fa fa-github-alt fa-2x"></i></a>
-						<a href="https://instagram.com/adamsabdulrazak28"><i class="fa fa-instagram fa-2x"></i></a>
-						<a href="https://www.linkedin.com/in/abdul-razak-adams-93274376/"><i class="fa fa-linkedin fa-2x"></i></a>
+						<a target="_blank" href="https://github.com/zark28"><i class="fa fa-github-alt fa-2x"></i></a>
+						<a target="_blank" href="https://instagram.com/adamsabdulrazak28"><i class="fa fa-instagram fa-2x"></i></a>
+						<a target="_blank" href="https://www.linkedin.com/in/abdul-razak-adams-93274376/"><i class="fa fa-linkedin fa-2x"></i></a>
 					</div>
 				</div>
 			</div>
@@ -79,6 +81,7 @@
 						<li>Javascript</li>
 						<li>Tailwind</li>
 						<li>Semantics-UI</li>
+						<li>React Js</li>
 						<li>Api | Axios</li>
 					</ul>
 				</div>
