--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						<p class="platform">Web</p>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
 						<p>Female Empowerment Initiative is a NGO supporting young girls and Women in areas of education and trade just to name a few.The site is to showcase thier work through blogs and seek donor support. It has and Admin section for posting Blogs</p>
-						<a class="my-button" target="_blank" href="http://google.com">Visit Website</a>
+						<a class="my-button" target="_blank" href="https://feem-initiative.vercel.app/">Visit Website</a>
 					</div>
 				</div>
 			</div>
